--- a/config/er14000w.yaml
+++ b/config/er14000w.yaml
@@ -25,11 +25,41 @@ ri4:
 # Position Controllers ---------------------------------------
   jointx_position_controller:
     type: effort_controllers/JointPositionController
-    joint: jointx
+    joint: joint4
     pid: {p: 100.0, i: 0.01, d: 10.0}
 
 # Position Controllers ---------------------------------------
   jointy_position_controller:
     type: effort_controllers/JointPositionController
-    joint: jointy
+    joint: joint5
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+# Position Controllers ---------------------------------------
+  jointy_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: joint6
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+# Position Controllers ---------------------------------------
+  jointy_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: joint7
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+# Position Controllers ---------------------------------------
+  jointy_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: joint8
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+# Position Controllers ---------------------------------------
+  jointy_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: joint9
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+# Position Controllers ---------------------------------------
+  jointy_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: joint10
     pid: {p: 100.0, i: 0.01, d: 10.0}
