Gazeboにおける歩行運動がつながった。しかし左足の動きがおかしい。次回：rvizで運動を確認する。 しかしながら、cpp_walkパッケージの方法では、下半身のモデルが正しく表示されない。 なので、ri4で行っているrvizの表示方法を解析し、運動に反映することを目指す。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,3 +200,5 @@ include_directories(
 
 add_executable(er14000w src/er14000w.cpp)
 target_link_libraries(er14000w ${catkin_LIBRARIES})
+add_executable(cpp_walk_gazebo src/cpp_walk_gazebo.cpp)
+target_link_libraries(cpp_walk_gazebo ${catkin_LIBRARIES})
